--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ import java.nio.charset.StandardCharsets
 
 buildscript {
   repositories {
+    maven { url 'https://maven.aliyun.com/repository/central' }
     mavenCentral()
   }
   apply from: "$rootDir/gradle/dependencies.gradle"
@@ -2112,6 +2113,8 @@ project(':server-common') {
     implementation libs.pcollections
     implementation libs.slf4jApi
 
+    implementation 'org.slf4j:slf4j-simple:1.7.36'
+    implementation 'org.fusesource.jansi:jansi:2.4.0'
     testImplementation project(':clients')
     testImplementation project(':clients').sourceSets.test.output
     testImplementation libs.jacksonDatabindYaml
@@ -3711,6 +3714,8 @@ project(':connect:mirror') {
     implementation project(':connect:runtime')
     implementation project(':connect:mirror-client')
     implementation project(':clients')
+
+
 
     implementation libs.argparse4j
     implementation libs.slf4jApi
