--- a/config/tools-log4j2.yaml
+++ b/config/tools-log4j2.yaml
@@ -16,8 +16,8 @@ Configuration:
   Properties:
     Property:
       - name: "logPattern"
-#        value: "[%d] %p %m (%c)%n"
-        value: "%highlight{[%d] %p %m (%c:%L)}{ERROR=red, WARN=yellow, INFO=green, DEBUG=cyan}%n"
+        value: "[%d] %p %m (%c)%n"
+#        value: "%highlight{[%d] %p %m (%c:%L)}{ERROR=red, WARN=yellow, INFO=green, DEBUG=cyan}%n"
 
   Appenders:
     Console:
